--- a/client/assets/style/style.css
+++ b/client/assets/style/style.css
@@ -26,6 +26,15 @@
     border-radius: 10px;
 }
 
+.post-img {
+    background-repeat: no-repeat;
+    background-position: center;
+    object-fit: cover;
+    width: 100%;
+    height: 50vh;
+    border-radius: 10px;
+}
+
 .p-img:hover {
     box-shadow: 0 5px 10px -2px rgb(27, 27, 27);
 }
@@ -35,4 +44,13 @@ img {
     background-repeat: no-repeat;
     background-position: center;
     height: 40em;
+}
+
+.modal-size {
+    min-width: 60%;
+    height: 60%;
+}
+
+.c-scroll {
+    overflow-y: auto;
 }
