--- a/client/assets/style/style.css
+++ b/client/assets/style/style.css
@@ -21,7 +21,7 @@
     background-repeat: no-repeat;
     background-position: center;
     object-fit: cover;
-    /* width: 30%; */
+    width: 30vw;
     height: 30vh;
     border-radius: 10px;
 }
